fixed the positioning of the to-do list section on tablet devices

--- a/src/styles.css
+++ b/src/styles.css
@@ -367,6 +367,10 @@ margin-left: 30px;
   padding-top: 100px;
 }
 
+.to-do-image {
+  margin-top: 30px;
+}
+
 .third-home-subheading, .fourth-home-subheading {
   
   font-size: 28px;
